--- a/src/main/resources/wechat.properties
+++ b/src/main/resources/wechat.properties
@@ -1,3 +1,11 @@
 getToken=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=APPID&secret=APPSECRET
 getIps=https://api.weixin.qq.com/cgi-bin/getcallbackip?access_token=ACCESS_TOKEN
 upload=http://file.api.weixin.qq.com/cgi-bin/media/upload?access_token=ACCESS_TOKEN&type=TYPE
+
+
+customerServiceMsg=https://api.weixin.qq.com/cgi-bin/message/custom/send?access_token=ACCESS_TOKEN
+
+
+
+
+
